<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context="com.hai.bt.activity.LoanCaculatorActivity">
    <EditText
        android:id="@+id/et_amount"
        android:hint="@string/amount"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/et_month"
        android:layout_gravity="center_horizontal"
        android:hint="@string/month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        >
        <EditText
            android:id="@+id/et_rate1"
            android:gravity="center_horizontal"
            android:hint="@string/rate1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_marginEnd="10dp"

            />
        <EditText
            android:id="@+id/et_rate2"
            android:hint="@string/rate2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_marginStart="10dp"

            />
    </LinearLayout>
    <Button
        android:text="@string/caculator"
        android:onClick="caculator"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/result"
        android:id="@+id/tv_result"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
