<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.hai.bt.activity.ButtonSimilarActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        >
        <ImageButton
            android:background="@drawable/ranger_red"
            android:onClick="setRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageButton
            android:background="@drawable/ranger_blue"
            android:onClick="setBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <RadioGroup
        android:id="@+id/rgroup_color"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:text="@string/color_red"
            android:id="@+id/rbtn_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/rbtn_blue"
            android:text="@string/color_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/rbtn_yellow"
            android:text="@string/color_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ToggleButton
            android:id="@+id/tbtn_red"
            android:textOn="@string/color_red"
            android:textOff="@string/not_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ToggleButton
            android:id="@+id/tbtn_blue"
            android:textOn="@string/color_blue"
            android:textOff="@string/not_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ToggleButton
            android:id="@+id/tbtn_yellow"
            android:textOn="@string/color_yellow"
            android:textOff="@string/not_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <RadioGroup
        android:id="@+id/rgroup_color2"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:text="@string/color_red"
            android:id="@+id/rbtn_red2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/rbtn_blue2"
            android:text="@string/color_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/rbtn_yellow2"
            android:text="@string/color_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>
    <Button
        android:text="@string/set_color"
        android:onClick="setColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_color"
        android:textSize="20sp"
        android:text="@string/power_ranger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
