<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.hai.bt.activity.RequestGsonActivity">
    <Button
        android:text="@string/request_get"
        android:onClick="requestGet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/request_get_param"
        android:onClick="requestGetParam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/caculator"
        android:onClick="caculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
