<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hai.bt.activity.RelativeActivity">
    <Button
        android:id="@+id/btn5"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn4"
        android:layout_above="@id/btn5"
        android:layout_toLeftOf="@id/btn5"
        android:text="@string/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn3"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/btn5"
        android:layout_toRightOf="@id/btn5"
        android:text="@string/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn1"
        android:layout_above="@id/btn4"
        android:layout_toLeftOf="@id/btn4"
        android:text="@string/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn2"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/btn3"
        android:layout_toRightOf="@id/btn3"
        android:text="@string/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>
